Update home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     	<div class="col-rt-12">
         	<div class="rt-heading">
             	<h1>Project Web Technology</h1>
-                <p><i>By: Group JamalGulung</i></p>
+                <p><i>By: Group The Jamal Gulung</i></p>
             </div>
         </div>
     </div>
@@ -48,8 +48,35 @@
   <div class="slider"><div class="indicator"></div></div>
   <div class="content">
         <section>
-          <h2>Home</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea dolorem sequi, quo tempore in eum obcaecati atque quibusdam officiis est dolorum minima deleniti ratione molestias numquam. Voluptas voluptates quibusdam cum?</p>
+          <h2>Welcome!</h2>
+          
+          <p>
+            We are from The <b>Jamal Gulung</b> and we are from <b>SECJ3483-04 WEB TECHNOLOGY</b>.
+          </p>
+
+          <p>
+            Our lecturer is <b>Sir Norizam</b> and
+          </p>
+
+          <p>
+            This group consists of 4 members which are:
+            <ul>
+              <li><b>Ahmad Mujahid</b></li>
+              <li><b>Idham Anur</b></li>
+              <li><b>Muhammad Firdaus</b></li>
+              <li><b>Khainor Azam</b></li>
+           </ul> 
+            
+          </p>
+
+          <p>
+              This is our website containing details about our group, our group member details as well as 
+              our projects for Web Technology. 
+          </p>
+
+          <p>
+            Feel free to roam around our website!
+          </p>
         </section>
 
         <section>
