--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h2>Welcome!</h2>
           
           <p>
-            We are from The <b>Jamal Gulung</b> and we are from <b>SECJ3483-04 WEB TECHNOLOGY</b>.
+            We are from <b>The Jamal Gulung</b> and we are from <b>SECJ3483-04 WEB TECHNOLOGY</b>.
           </p>
 
           <p>
@@ -77,11 +77,24 @@
           <p>
             Feel free to roam around our website!
           </p>
+
+          <img src="https://media.giphy.com/media/hVEBWRInEvNOEVS18i/giphy.gif" id="welcome">
         </section>
 
         <section>
           <h2>About Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem quas adipisci a accusantium eius ut voluptatibus ad impedit nulla, ipsa qui. Quasi temporibus eos commodi aliquid impedit amet, similique nulla.</p>
+
+          <div class="row">
+
+            <div class="column left">
+              <p style="text-align: justify; padding-right: 5em;">Jamal Gulung was establish in 2022 for Web Technology Project Assignment inspired by one of the famous tiktokers which is Jamal Gulung. For the first assignment, we've been asked to create our own website. Our objective is to learn and master this course. Please keep in touch with us to keep up with our group progress.</p>
+              <img src="https://www.just.edu.jo/Units_and_offices/Offices/IRO/PublishingImages/Pages/contactus/about_us.gif" id="abt-us">
+            </div>
+
+            <div class="column right">
+              <img src="https://media.giphy.com/media/1ZDDyAaAA82ywDiyKs/giphy.gif" id="robot">
+            </div>
+          </div>
         </section>
         
         <section>
