--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                         <div class="members-container-card-desc">
                                             <h4>Ahmad Mujahid</h4>
                                             <p>Project Leader</p>
-                                            <p id="matric">A19EC0190</p>
+                                            <p id="matric">A19EC0008</p>
 
                                         </div>
                                     </div>
@@ -175,8 +175,21 @@
 
                             <section>
                                 <h2>Projects</h2>
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dicta vero rerum? Eaque repudiandae architecto libero reprehenderit aliquam magnam ratione quidem? Nobis doloribus molestiae enim deserunt necessitatibus eaque
-                                    quidem incidunt.</p>
+                                <br>
+                                    <div class="row">
+                                        <div class="column Pr1">
+                                            <button id="myBtn"><a href="Assignment_2/theVase.html" class="our_project"><b>Project 1</b></a></button>
+                                            <br><br>This project required us to implement the ux design from <a href="https://youtu.be/L2Su3P78Mk8" class="ytlink"> this </a> YouTube video into a working web page.
+                                        </div>
+                                        <div class="column Pr2">
+                                            <button id="myBtn"><a href="" id="our_project"><b>Project 2</b></a> </button>
+                                            <br><br>Project Description <a href="" class="ytlink"></a>
+                                        </div>
+                                        <div class="column Pr3">
+                                            <button id="myBtn"><a href="" id="our_project"><b>Project 3</b></a> </button>
+                                            <br><br>Project Description <a href="" class="ytlink"></a>
+                                        </div>  
+                                    </div>
                             </section>
                         </div>
                     </div>
